# Email_management

./: .gitignore  README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
blog/templatetags/: my_tags.py
config/: settings.py  urls.py
distribution/: admin.py  apps.py  forms.py  models.py  operator.py  services.py  urls.py  views.py
distribution/management/commands/: start.py
distribution/migrations/: 0001_initial.py  0002_alter_client_options_delivery_email_client_and_more.py  0003_rename_sendtry_sendattempt_attempt.py  0004_alter_sendattempt_options_sendattempt_delivery_and_more.py  0005_alter_delivery_is_created.py  0006_sendattempt_client.py  0007_delivery_finish_delivery_delivery_start_delivery.py  0008_delivery_next_sending.py  0009_alter_delivery_message_alter_delivery_start_delivery.py  0010_delivery_owner.py  0011_alter_delivery_options_client_owner_message_owner.py  0012_alter_delivery_options.py
distribution/templates/distribution/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  contacts.html  delivery_confirm_delete.html  delivery_detail.html  delivery_form.html  delivery_list.html  index.html  management_list.html  message_confirm_delete.html  (+4 more)
fixtures/: auth.json  blog.json  distriburion.json
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
(+6 files in other folders)
